--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@upstash/redis": "^1.34.9",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
