--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.0",
     "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "twilio": "^5.8.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
